--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -6,10 +6,10 @@
   <div class="form-container">
 
     <div class="sign-in">
-      <form action="#">
+      <form action="#"(ngSubmit)="onLogin()">
         <h1>Sign in</h1>
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
+        <input type="email" [(ngModel)]="authData.email" name="authEmail" placeholder="Email" />
+        <input type="password" [(ngModel)]="authData.password" name="authPassword" placeholder="Password" />
         <a href="#" class="fogot-pass">Forgot your password?</a>
         <button>Sign In</button>
       </form>
@@ -18,11 +18,10 @@
     <div class="sign-up">
       <form action="#" (ngSubmit)="onRegister()">
         <h1>Create Account</h1>
-
-        <input type="text"  placeholder="Name" />
-        <input type="email" placeholder="Email" />
-        <input type="password" placeholder="Password" />
-        <input type="confirmPassword" placeholder="Confirm Password" />
+        <input type="text" [(ngModel)]="user.username" name="username" placeholder="Name" />
+        <input type="email" [(ngModel)]="user.email" name="email" placeholder="Email" />
+        <input type="password"  [(ngModel)]="user.password" name="password" placeholder="Password" />
+        <input type="password" [(ngModel)]="user.verifyPassword" name="verifyPassword" placeholder="Confirm Password" />
         <button type="submit">Sign Up</button>
       </form>
     </div>
