--- a/src/app/coursdetail/cour-detail.component.html
+++ b/src/app/coursdetail/cour-detail.component.html
@@ -1,15 +1,15 @@
 <body>
-    
+
 
 
     <app-navbar></app-navbar>
-    
-  
-    
+
+
+
     <!-- Header End -->
-   
+
     <!--================End Home Banner Area =================-->
-    
+
     <!--================Course Details Area =================-->
     <section class="course_details_area p-120">
         <div class="container">
@@ -23,7 +23,9 @@
                             <mat-tab label="Description" color="blue">
                                 <div class="tab-content">
                                     <!-- Description content goes here -->
-                                    <p>Embark on a transformative learning journey with our Angular course, designed to empower you in building dynamic and robust web applications. Angular, developed and maintained by Google, is a leading front-end framework known for its flexibility, scalability, and ease of development. In this course, you will start with the basics, mastering the core concepts of Angular, including components, modules, services, and dependency injection. As you progress, you'll delve into more advanced topics such as reactive programming with RxJS, routing, and state management. Our hands-on approach ensures that you not only understand the theory but also gain practical experience in building real-world applications. Whether you're a beginner exploring the world of front-end development or an experienced developer looking to enhance your skill set, our Angular course is your gateway to mastering this powerful framework and elevating your web development expertise.</p>
+                                    <p>
+                                    {{description}}
+                                    </p>
                                 </div>
                             </mat-tab>
                             <mat-tab label="Outline">
@@ -58,7 +60,7 @@
                                     </mat-card-content>
                                 </mat-card>
                             </mat-tab>
-                            
+
                         </mat-tab-group>
                     </div>
                 </div>
@@ -66,44 +68,44 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Trainer’s Name
-                            <span class="badge bg-primary">George Mathews</span>
+                            <span class="badge bg-primary">{{ instructorName }}</span>
                         </li>
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Outline
                             <span class="badge bg-success">5</span>
                         </li>
-                       
+
                         <li class="list-group-item d-flex justify-content-between align-items-center">
                             Duration
-                            <span class="badge bg-warning">15 hours</span>
+                            <span class="badge bg-warning">{{ duration }} hours</span>
                         </li>
                     </ul>
-                    <a class="main_btn" href="/enroll/lesson">Enroll the Course</a>
+                  <a class="main_btn"  (click)="EnrollIn()">Enroll the Course</a>
                     <p>Rate Now</p>
                     <div class="star-rating">
-                       
+
                         <mat-icon *ngFor="let i of [1, 2, 3, 4, 5]"
                                   (click)="starRating = i"
                                   [class.star-selected]="starRating >= i" >
                           star
                         </mat-icon>
                       </div>
-                      
-                      
-                      
-              
-  
-  
 
-  
+
+
+
+
+
+
+
                 </div>
             </div>
         </div>
     </section>
-    
-    
-    
-   
+
+
+
+
 <app-footer></app-footer>
 
 
