--- a/src/app/courses/courses.component.html
+++ b/src/app/courses/courses.component.html
@@ -1,3 +1,4 @@
+<script src="courses.component.ts"></script>
 <body>
 
 
@@ -86,8 +87,7 @@
                         <div class="position-relative overflow-hidden">
                             <img class="img-fluid" [src]=" imageUri+course.courseImage" alt="{{course.courseName}}">
                             <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                              <button type="button" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;" (click)="NavigateToDetails(course._id)">Read More</button>
-                                <a href="enroll/lesson" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
+                              <button type="button" class="flex-shrink-0 btn btn-sm btn-primary px-3 " style="border-radius: 30px 0 0 30px;" (click)="NavigateToDetails(course._id)">Join Now</button>
                             </div>
                         </div>
                         <div class="text-center p-4 pb-0">
@@ -103,7 +103,7 @@
                             <h5 class="mb-4">{{ course.courseName }}</h5>
                         </div>
                         <div class="d-flex border-top">
-                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>{{course.instructor.email}}</small>
+                            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>{{course.instructor.username}}</small>
                             <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
                             <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
                         </div>
