--- a/src/app/prof/managecourses/managecourses.component.html
+++ b/src/app/prof/managecourses/managecourses.component.html
@@ -1,74 +1,80 @@
 <app-navprof></app-navprof>
-<div>
-<i class="fa-solid fa-circle-plus"></i></div>
 <div class="container-xxl py-5">
-    <div class="container">
-       
-        <div class="row g-4 justify-content-center">
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                <div class="course-item bg-light">
-                    <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="assets/img/course-1.jpg" alt="">
-                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                            <a type="button"class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;" (click)="openAddAgentDialog()" >Edit</a>
-                            <a type="button" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;" (click)="deleteCourse()">Delete</a>
-                        </div>
-                    </div>
-                    <div class="text-center p-4 pb-0">
-                        
-                      
-                        <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
-                    </div>
-                    <div class="d-flex border-top">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
-                        <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
-                    </div>
-                </div>
+  <div class="container">
+
+    <div class="row g-4 justify-content-center" *ngFor="let course of instructorCourses">
+      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+        <div class="course-item bg-light">
+          <div class="position-relative overflow-hidden">
+            <img alt="" class="img-fluid" [src]=" imageUri+course.courseImage" alt="{{course.courseName}}">
+            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
+              <a (click)="openAddAgentDialog()" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end"
+                 style="border-radius: 30px 0 0 30px;" type="button">Edit</a>
+              <a (click)="deleteCourse(course._id)" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;"
+                 type="button">Delete</a>
             </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
-                <div class="course-item bg-light">
-                    <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="assets/img/course-2.jpg" alt="">
-                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Edit</a>
-                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Delete</a>
-                        </div>
-                    </div>
-                    <div class="text-center p-4 pb-0">
-                        
-                      
-                        <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
-                    </div>
-                    <div class="d-flex border-top">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
-                        <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-                <div class="course-item bg-light">
-                    <div class="position-relative overflow-hidden">
-                        <img class="img-fluid" src="assets/img/course-3.jpg" alt="">
-                        <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Edit</a>
-                            <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Delete</a>
-                        </div>
-                    </div>
-                    <div class="text-center p-4 pb-0">
-                       
-                       
-                        <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
-                    </div>
-                    <div class="d-flex border-top">
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
-                        <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
-                        <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
-                    </div>
-                </div>
-            </div>
+          </div>
+          <div class="text-center p-4 pb-0">
+            <h5 class="mb-4">{{course.courseName}}</h5>
+          </div>
+          <div class="d-flex border-top">
+            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>{{course.instructor.username}}</small>
+            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>{{course.TimeToCompleteTheCourse}} Hr</small>
+            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
+          </div>
         </div>
+      </div>
+<!--      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">-->
+<!--        <div class="course-item bg-light">-->
+<!--          <div class="position-relative overflow-hidden">-->
+<!--            <img alt="" class="img-fluid" src="assets/img/course-2.jpg">-->
+<!--            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">-->
+<!--              <a class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" href="#"-->
+<!--                 style="border-radius: 30px 0 0 30px;">Edit</a>-->
+<!--              <a class="flex-shrink-0 btn btn-sm btn-primary px-3" href="#"-->
+<!--                 style="border-radius: 0 30px 30px 0;">Delete</a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="text-center p-4 pb-0">-->
+
+
+<!--            <h5 class="mb-4">Web Design & Development Course for Beginners</h5>-->
+<!--          </div>-->
+<!--          <div class="d-flex border-top">-->
+<!--            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John-->
+<!--              Doe</small>-->
+<!--            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49-->
+<!--              Hrs</small>-->
+<!--            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
+<!--      <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">-->
+<!--        <div class="course-item bg-light">-->
+<!--          <div class="position-relative overflow-hidden">-->
+<!--            <img alt="" class="img-fluid" src="assets/img/course-3.jpg">-->
+<!--            <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">-->
+<!--              <a class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" href="#"-->
+<!--                 style="border-radius: 30px 0 0 30px;">Edit</a>-->
+<!--              <a class="flex-shrink-0 btn btn-sm btn-primary px-3" href="#"-->
+<!--                 style="border-radius: 0 30px 30px 0;">Delete</a>-->
+<!--            </div>-->
+<!--          </div>-->
+<!--          <div class="text-center p-4 pb-0">-->
+
+
+<!--            <h5 class="mb-4">Web Design & Development Course for Beginners</h5>-->
+<!--          </div>-->
+<!--          <div class="d-flex border-top">-->
+<!--            <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John-->
+<!--              Doe</small>-->
+<!--            <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49-->
+<!--              Hrs</small>-->
+<!--            <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>-->
+<!--          </div>-->
+<!--        </div>-->
+<!--      </div>-->
     </div>
+  </div>
 </div>
 <!-- Courses End -->
