--- a/src/app/prof/addcours/add-cours.component.html
+++ b/src/app/prof/addcours/add-cours.component.html
@@ -25,6 +25,7 @@
         <input type="number" id="timeToCompleteTheCourse" [(ngModel)]="TimeToCompleteTheCourse" name="TimeToCompleteTheCourse">
       </div>
       <div>
+        <div>Free or not ?</div>
         <label>
           <input type="radio" name="freeOrNot"  (click)="selectedValue='true'" value="true"> Yes
         </label>
